Fixed overflow causing two scrollbars and hidden footer (caused by WordPress admin bar)

--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -1,3 +1,7 @@
+html {
+    overflow: hidden;
+}
+
 body {
     background: image-url('background.jpg') no-repeat center center fixed;
     @include background-size(cover);
@@ -21,7 +25,7 @@ body {
 .off-canvas-wrap, .inner-wrap {
     min-height: 100%;
 }
-    .off-canvas-wrap {  
+    .off-canvas-wrap {
         height: 100%;
         overflow-y: auto;
     }
@@ -30,6 +34,10 @@ body {
         max-height: 100%;
         vertical-align: top;
     }
+
+.admin-bar .off-canvas-wrap {
+    padding-bottom: 32px;
+}
 
 .multilevel {
     &.active > a {
